Fix drawing buttons spacing

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,9 @@ button:active {
 
 .drawing-buttons {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 2vw;
     width: 40vw;
     height: 50px;
 }
